--- a/package.json
+++ b/package.json
@@ -57,8 +57,9 @@
   "bugs": {
     "url": "https://github.com/hisasu00/en-pronounciation-checker/issues"
   },
-  "homepage": "https://github.com/hisasu00/en-pronounciation-checker#readme"
-},
 "engines": {
 "node": "8.10.0",
-"npm": "3.5.2"}
+"npm": "3.5.2"
+},
+  "homepage": "https://github.com/hisasu00/en-pronounciation-checker#readme"
+}
