--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   },
   "dependencies": {
     "core-js": "^3.6.4",
+    "express": "^4.17.1",
     "vue": "^2.6.11",
     "vuetify": "^2.2.11"
   },
@@ -57,9 +58,9 @@
   "bugs": {
     "url": "https://github.com/hisasu00/en-pronounciation-checker/issues"
   },
-"engines": {
-"node": "8.10.0",
-"npm": "3.5.2"
-},
+  "engines": {
+    "node": "8.10.0",
+    "npm": "3.5.2"
+  },
   "homepage": "https://github.com/hisasu00/en-pronounciation-checker#readme"
 }
